--- a/clone/index.html
+++ b/clone/index.html
@@ -1,14 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clone website</title>
-<link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
-    <h1>ksd
-        sdjsjjsdlfls
-    </h1>
+    <section class="parent">
+        <section>
+            <aside class="left-side">
+                <img src="images logo/bald_eagle_holding_blank_banner_vector.jpg" class="profile">
+                <div class="icons">
+                    <i class="fa-regular fa-moon"></i>
+                    <i class="fa-solid fa-rotate"></i>
+                    <i class="fa-regular fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+                </aside>
+                <aside class="chat-lists">
+                    <div class="chat-items">
+                        <img src="images logo/beauty.jpg" class="profile">
+                    <div class="chat-contents">
+                        <div class="top-rows">
+                            <h4 class="name">John Smith</h4>
+                                <span class="time"><i class="fa-solid fa-xmark close-icon"></i></span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">You can import contacts from Google <a href="">Learn more</a></p>
+                        </div>
+                    </div>
+                    <!-- <div class="icon">
+                        <i class="fa fa-message"></i>
+                        <span class="count">5</span>
+                    </div>
+                    </div> -->
+                </aside>
+            
+            <div class="search-bg">
+
+                <div class="search">
+                    <i class="fa fa-search"></i>
+                    <input type="search" placeholder="Search or start a new chat">
+                </div>
+            </div>
+                <aside class="chat-list">
+                    <div class="chat-item">
+                        <img src="images logo/beauty.jpg" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">John Smith</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓ testing</p>
+                        </div>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-message"></i>
+                        <span class="count">5</span>
+                    </div>
+                    </div>
+                </aside>
+            <aside class="chat-list">
+                <div class="chat-item">
+                    <img src="images logo/excellence.png" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">Jane Doe</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓ Hello there!</p>
+                        </div>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-message"></i>
+                        <span class="count">5</span>
+                    </div>
+                    </div>
+                </aside>
+            <aside class="chat-list">
+                <div class="chat-item">
+                    <img src="images logo/friends.jpg" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">Bob Johnson</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓✓ How are you</p>
+                        </div>
+                    </div>
+                    </div>
+                </aside>
+            <aside class="chat-list">
+                <div class="chat-item">
+                    <img src="images logo/professional.png" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">Samantha Lee</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓ See you tomorrow</p>
+                        </div>
+                    </div>
+                
+                    </div>
+                </aside>
+            <aside class="chat-list">
+                <div class="chat-item">
+                    <img src="images logo/960d3e3d-14fc-475c-8a64-e1d21b9578a1.png" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">William Chen</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓✓ Thanks for your help!</p>
+                        </div>
+                    </div>
+                    </div>
+                </aside>
+            <aside class="chat-list">
+                <div class="chat-item">
+                    <img src="images logo/cloud.jpg" class="profile">
+                    <div class="chat-content">
+                        <div class="top-row">
+
+                            <h4 class="name">Emilly Kim</h4>
+                                <span class="time">08:21</span>
+                        </div>
+                        <div class="bottom-row">
+                            <p class="message typing">✓✓ Are you free tonight!</p>
+                        </div>
+                    </div>
+                    </div>
+                </aside>
+        </section>
+        <!-- left one side section completed -->
+        <main class="main-section">
+            <aside class="main-first-section">
+                <img src="images logo/beauty.jpg" alt="">
+                <div class="main-icons">
+                    <i class="fa fa-search"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </aside>
+            <div class="messages">
+                <p id="p1"><i class="fa-solid fa-lock"></i>Messages are end-to-end encrypted. No one outside of this
+                    chat, not even whtatsapp, can read or listen to them. Click to learn more</p>
+                <p id="p2">TODAY</P>
+                <div class="p-flex">
+                    <div class="message message-left">
+                        Can you send me this file?
+                        <span>08:58✓✓</span>
+                    </div>
+                    <div class="message message-right">
+                        sure
+                        <span>09:01✓✓</span>
+                    </div>
+                    <div class="message message-left">
+                        Can you send me this file?
+                        <span>08:58✓✓</span>
+                    </div>
+                    <div class="message message-right">
+                        sure
+                        <span>09:01✓✓</span>
+                    </div>
+                    <div class="message message-left">
+                        Can you send me this file?
+                        <span>08:58✓✓</span>
+                    </div>
+                    <div class="message message-right">
+                        sure
+                        <span>09:01✓✓</span>
+                    </div>
+                    <div class="message message-left">
+                        Can you send me this file?
+                        <span>08:58✓✓</span>
+                    </div>
+                    <div class="message message-right">
+                        sure
+                        <span>09:01✓✓</span>
+                    </div>
+                    <div class="message message-left">
+                        Can you send me this file?
+                        <span>08:58✓✓</span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <i class="fa-solid fa-paperclip"></i>
+                <div class="search">
+                    <input type="search" placeholder="Type a message here">
+                </div>
+                <i class="fa-solid fa-paper-plane"></i>
+            </div>
+
+        </main>
+        <!-- center portion completed -->
+        <section class="right-sections">
+            <aside class="right-section">
+                <div class="flex2">
+                    <i class="fa-solid fa-xmark close-icon"></i>
+                    <h3>NO Contacts</h3>
+            </aside>
+            </div>
+            <div class="right-img">
+                <div class="image-cont">
+                    <img src="images logo/lake.jpg" alt="">
+                    <h3>John Smith</h3>
+                </div>
+            </div>
+            <div class="c-flex">
+                <div class="c-flex-text">
+                    <p>Media,Links and Documentes</p>
+                    <p>></p>
+                </div>
+                <div class="c-flex-parent">
+                    <img class="c-flex-image" src="images logo/empty image.png" alt="">
+                    <img class="c-flex-image" src="images logo/empty image.png" alt="">
+                    <img class="c-flex-image" src="images logo/empty image.png" alt="">
+                </div>
+            </div>
+            <section class="about">
+                <p class="p-1">
+                    About and phone number
+                </p>
+                <p class="p-2">Everyone should learn how to program because it teaches you how to think</p>
+            </section>
+        </section>
 </body>
+
 </html>
