--- a/clone/index.html
+++ b/clone/index.html
@@ -26,8 +26,8 @@
                         <img src="images logo/beauty.jpg" class="profile">
                     <div class="chat-contents">
                         <div class="top-rows">
-                            <h4 class="name">John Smith</h4>
-                                <span class="time"><i class="fa-solid fa-xmark close-icon"></i></span>
+                            <h4 class="name">No Contact</h4>
+                                <span class="time1"><i class="fa-solid fa-xmark close-icon"></i></span>
                         </div>
                         <div class="bottom-row">
                             <p class="message typing">You can import contacts from Google <a href="">Learn more</a></p>
@@ -49,7 +49,7 @@
             </div>
                 <aside class="chat-list">
                     <div class="chat-item">
-                        <img src="images logo/beauty.jpg" class="profile">
+                        <img src="images logo/lake.jpg" class="profile">
                     <div class="chat-content">
                         <div class="top-row">
 
